merapikan dto
