# models/domain/user.go
@@ -9,3 +9,30 @@ type User struct {
 	Password []byte `json:"password"`
 	gorm.Model
 }
+
+// Request DTO Area
+
+type UserLoginRequest struct {
+	Email    string `json:"email"`
+	Password string `json:"password"`
+}
+
+type UserRegisterRequest struct {
+	FirstName       string `json:"first_name"`
+	LastName        string `json:"last_name"`
+	Email           string `json:"email"`
+	Password        string `json:"password"`
+	ConfirmPassword string `json:"confirm_password"`
+}
+
+// End of request dto area
+
+// Response DTO Area
+
+type UserResponse struct {
+	FirstName string `json:"first_name"`
+	LastName string `json:"last_name"`
+	Email string `json:"email" gorm:"unique"`
+}
+
+// End of response dto area
