# models/dto/request/authDto/userLoginRequest.go
@@ -1,6 +1,0 @@
-package authDto
-
-type UserLoginRequest struct {
-	Email    string `json:"email"`
-	Password string `json:"password"`
-}
