# models/dto/request/authDto/userRegisterRequest.go
@@ -1,9 +1,0 @@
-package authDto
-
-type UserRegisterRequest struct {
-	FirstName       string `json:"first_name"`
-	LastName        string `json:"last_name"`
-	Email           string `json:"email"`
-	Password        string `json:"password"`
-	ConfirmPassword string `json:"confirm_password"`
-}
