# models/dto/response/userResponse.go
@@ -1,7 +1,0 @@
-package response
-
-type UserResponse struct {
-	FirstName string `json:"first_name"`
-	LastName string `json:"last_name"`
-	Email string `json:"email" gorm:"unique"`
-}
